plugins {
    id "java"
}

group "uk.gov.di.orchestration.sharedtest"
version "unspecified"

dependencies {
    implementation configurations.tests,
            configurations.lambda,
            configurations.apache,
            configurations.nimbus,
            configurations.lettuce,
            configurations.dynamodb,
            configurations.kms,
            configurations.sns,
            configurations.s3,
            configurations.sqs,
            configurations.ssm,
            configurations.cloudwatch,
            "org.eclipse.jetty:jetty-server:11.0.18",
            "com.google.code.gson:gson:2.10.1"

    implementation project(":orchestration-shared")
    implementation project(":frontend-api")
    implementation project(":doc-checking-app-api")
    implementation project(":oidc-api")
}

test {
    useJUnitPlatform()
    environment "TRACING_ENABLED", "false"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}
